# WinterCup6

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Storyline  TODO
Balanced Problemset/: statement.md
Check the function/: CMakeLists.txt  brute_force_solution.cpp  checker  checker.cpp  generate_all_yes.cpp  generate_no.cpp  main.cpp  mtaylor_main_solution.cpp  statement.md
Check the function/allYesCombinations/: bruteforce1.cpp  bruteforce1Result.txt  bruteforce2.cpp
Colour the Sectors/: CMakeLists.txt  generator_combined.cpp  solution.md  version1.cpp  version2.cpp
Construct The Tree/: CMakeLists.txt  checker.cpp  statement.md
Cryptocurrency/: statement.md
DOMJudge/: groups.json  notes.md  organizations.json
DOMJudge/balance-sequence/: check.cpp  domjudge-problem.ini  problem.xml  problem.yaml
DOMJudge/balance-sequence/data/secret/: 01.in  02.ans  02.in  03.ans  03.in  04.ans  04.in  05.ans  05.in  06.ans  06.in  07.ans  (+151 more)
DOMJudge/casino/: domjudge-problem.ini  problem.yaml
DOMJudge/casino/solutions/: p_5_0.cpp  p_5_0.cpp.desc  p_5_4.cpp  p_5_4.cpp.desc  p_5_7.cpp  p_5_7.cpp.desc  p_5_7_python.py  p_5_7_python.py.desc  p_6_0.cpp  p_6_0.cpp.desc  p_6_3.cpp  p_6_3.cpp.desc  solution_yessine.cpp
DOMJudge/count-factorisations/: domjudge-problem.ini  problem.yaml
DOMJudge/count-factorisations-polygon/: problem.xml
DOMJudge/count-factorisations-polygon/files/: generator.cpp
DOMJudge/count-factorisations/problem_statement/: .xdp-cpp20.zip-zwoEKD
Divisibility Game/: CMakeLists.txt  DecisionTree.ipynb  generator_combined.cpp  grundy.cpp  notes.md  output.txt  solution.cpp  statement.md
Divisibility Game/.ipynb_checkpoints/: DecisionTree-checkpoint.ipynb  output-checkpoint.txt
Fantasy/: statement.md
Final Scoreboard/: Scoreboard wintercup-6 - DOMjudge.html
Grid Crash/: CMakeLists.txt  generator.cpp  mtaylor.cpp  solution.cpp  statement.md
Iceberg Corporations/: statement.md
Infinite Money Glitch/: CMakeLists.txt  example.in  solution.cpp  solution.md  statement.md
LCM Guess/: CMakeLists.txt  checker.cpp  find_one.cpp  in.txt  interactor  large_prime.cpp  largest_prime.cpp
LCM Guess I/: generator.cpp  statement.md
LeCompteEstBon/: CMakeLists.txt  rami.cpp  solution.cpp  statement.md
Maximal String/: statement.md
New language/: statement.md
PolygonDOMConverter/: .gitignore  Test.ipynb  contest.py  convert.py  dom_converter.py  install-mathjax.sh  logging.py  main.py  prepare_statements.py  problem.py  scripts.py
Practice/: CMakeLists.txt
Practice/Find The Sum/: CMakeLists.txt  solution.cpp  wa.cpp
Practice/Find The Sum/attachments/: README.md  interaction.txt  solution  start_interaction.sh  wa
Practice/Find The Sum/attachments/examples/: example.c  example.cpp  example.java  example.py
Practice/Find The Sum/attachments/samples/: 04.in
Practice/Find The Sum/attachments/src/: interactor.c  interactor.cpp  interactor.java
Practice/Longer String/: solution.cpp
Practice/Strange Number/: solution.cpp
Problems/Balanced Problemset/: solution.c  solution.cpp
Problems/Balanced Tournament/: CMakeLists.txt  generator.cpp  generator_combined.cpp  notes.md
Problems/Check the function/: CMakeLists.txt  solution.c
Problems/Check the function/Infinite Money Glitch/: solution.cpp  statement.md
Problems/Colour the Sectors/: CMakeLists.txt  combined.cpp  solution.c
Problems/Colour the Sectors/media/: example.blend  example.blend1  example2.blend
Problems/Construct The Tree/: solution.cpp
Problems/Construct The Tree/media/: graph.xcf
Problems/Cryptocurrency/: CMakeLists.txt  generator.cpp  generator_combined.cpp  solution.c
Problems/Dark Souls/: statement.md
Problems/Divisibility Game/: .gitignore  CMakeLists.txt  generator.cpp  notes.md  solution.c  solution.md  statement.md  validator.cpp
Problems/Enemies of the heir... beware/: constructive_solution.cpp  generate_yes.cpp  generate_yes_no.cpp
Problems/Enemies of the heir... beware/allYesCombinations/: bruteforce2Result.txt
Problems/Find The Tree?/: CMakeLists.txt  solution.c
Problems/Grid Crash/: CMakeLists.txt  binary.cpp  generator_alternating.cpp  generator_binary.cpp  solution.c  solution.cpp  solution.md  statement.md  validator.cpp  yessineHeuristic.cpp
Problems/Hide the money/: solution.c  solution.cpp  solution_bool.cpp  solution_bool_opt.cpp  solution_optimised.cpp
Problems/Iceberg Corporations/: CMakeLists.txt  solution.py  solutions.md  statement.md
Problems/Inclusion And Diversity/: generator.cpp
Problems/Infinite Money Glitch/: CMakeLists.txt  generator.cpp  heuristic.cpp  solution.c  solution.md  solution_combined.cpp  validator.cpp  validator_combined.cpp
Problems/LCM Guess I/: .gitignore  CMakeLists.txt  generator_2.cpp  generator_combined.cpp  interactor.cpp  iterative.cpp  large_prime.cpp  largest_prime.cpp  solution.c  solution.cpp  statement.md
Problems/LCM Guess I/attachments/: README.md  start_interaction.py  start_interaction.sh
Problems/LCM Guess I/attachments/examples/: example.c  example.cpp  example.java  example.py
Problems/LCM Guess I/attachments/samples/: 02.in  03.in
Problems/LCM Guess I/attachments/src/: interactor.c  interactor.cpp  interactor.java
Problems/Maximal String/: CMakeLists.txt  naive.c  solution.c  solution.cpp
Problems/Modular Universe/: CMakeLists.txt  generator.cpp  generator_combined.cpp  naive.cpp  solution.c  solution.cpp  validator.cpp
Problems/New language/: CMakeLists.txt  solution.c  solution.cpp
Problems/Uniform Sampler/: CMakeLists.txt  MC.cpp  generator.cpp  solution.md  statement.md
Problems/Unique Disk Identifier/: CMakeLists.txt  generator.cpp  sample.in  statement.md  version1.cpp
Problems/Unique Disk Identifier/media/: example2.blend1
Problems/Universe Algorithm/: solution.c  solutionForK2.cpp
Random Walk/: CMakeLists.txt  ExpectedGraph.md  MC.cpp  Solution.md  checker.cpp  expected_graph.txt  solution.cpp  tests.txt
Uniform Sampler/: solution.cpp  statement.md
Universe Algorithm (Easy Version)/: Statement.md
WinterCup Maze/: solution.cpp  statement.md
(+30 files in other folders)
