cmake_minimum_required(VERSION 3.26)
project(WinterCup6)

set(CMAKE_CXX_STANDARD 20)
include_directories("${CMAKE_CURRENT_SOURCE_DIR}/ext/CPLibrary/include")
include_directories("${CMAKE_CURRENT_SOURCE_DIR}/ext/TestLib")

MACRO(SUBDIRLIST result curdir)
    FILE(GLOB children RELATIVE ${curdir} ${curdir}/*)
    SET(dirlist "")
    FOREACH(child ${children})
        IF(IS_DIRECTORY ${curdir}/${child})
            LIST(APPEND dirlist ${child})
        ENDIF()
    ENDFOREACH()
    SET(${result} ${dirlist})
ENDMACRO()
MESSAGE(STATUS "CMAKE_CURRENT_SOURCE_DIR: ${CMAKE_CURRENT_SOURCE_DIR}")
SET(MY_CURRENT_DIR ${CMAKE_CURRENT_SOURCE_DIR})
SUBDIRLIST(SUBDIRS ${MY_CURRENT_DIR})
SET(RUNTIME_OUTPUT_DIRECTORY "bin")

FOREACH(subdir ${SUBDIRS})
    MESSAGE(STATUS "Processing subdirectory: ${subdir}")
    SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/bin/${subdir}")
    IF (EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/${subdir}/CMakeLists.txt")
        MESSAGE(STATUS "Detected CMakeLists.txt for subdirectory: ${subdir}")
        ADD_SUBDIRECTORY(${subdir})
    ELSE ()
        MESSAGE(STATUS "Manually looking for standard solution files: ${subdir}")
        SET(ZEXISTS FALSE)
        FOREACH (file solution main)
            FOREACH (ext cpp cc c cxx)
                IF (ZEXISTS)
                    BREAK()
                ENDIF ()
                SET(FILENAME "${CMAKE_CURRENT_SOURCE_DIR}/${subdir}/${file}.${ext}")
                IF (EXISTS "${FILENAME}")
                    SET(ZEXISTS TRUE)
                    MESSAGE(STATUS "Found standard solution file: ${subdir}/${file}.${ext}")
                    STRING(REPLACE " " "" target_name ${subdir})
                    MESSAGE(STATUS "Target name: ${target_name}")
                    ADD_EXECUTABLE("${target_name}" "${FILENAME}")
                    BREAK()
                ENDIF ()
            ENDFOREACH ()
        ENDFOREACH ()
        IF (NOT ZEXISTS)
            MESSAGE(WARNING "No standard solution files found for: ${subdir}")
        ENDIF ()
    ENDIF ()
ENDFOREACH()

#SET(ADDITIONAL_CLEAN_FILES "${CMAKE_CURRENT_SOURCE_DIR}/bin")